--- a/.github/workflows/test_and_coverage.yml
+++ b/.github/workflows/test_and_coverage.yml
@@ -18,10 +18,23 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
-      - name: Install Tox and any other packages
-        run: pip install -U tox-travis coveralls
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements_dev.txt
       - name: Run Tox
         # Run tox using the version of Python in `PATH`
         run: tox -e py
           echo Add other actions to build,
           echo test, and deploy your project.
+      - name: Test with pytest
+        run: |
+          pip install pytest
+          pip install pytest-cov
+          pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+      - name: push to coveralls
+        run: |
+          coverage run --source=creopyson setup.py test
+          coveralls
+        with:
+          github-token: ${{ secrets.COVERALLS_TOKEN }}
