add create report

--- a/.github/workflows/test_and_coverage.yml
+++ b/.github/workflows/test_and_coverage.yml
@@ -27,6 +27,10 @@ jobs:
         run: tox -e py
           echo Add other actions to build,
           echo test, and deploy your project.
+      - name: Coverage
+        run: |
+          coverage run --source=creopyson setup.py test
+          coverage report -m
       - name: Coveralls
         run: coverage run --source=creopyson setup.py test
         uses: coverallsapp/github-action@master
