--- a/.github/workflows/test_and_coverage.yml
+++ b/.github/workflows/test_and_coverage.yml
@@ -43,10 +43,19 @@ jobs:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #   run: |
       #     coveralls
+      # - name: Test with pytest
+      #   run: |
+      #     pytest
+      # - name: Coveralls
+      #   uses: coverallsapp/github-action@master
+      #   with:
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Test with pytest
         run: |
-          pytest
+          pip install pytest pytest-cov
+          python -m pytest --cov-report xml
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          path--to-lcov: coverage.xml
