--- a/.github/workflows/test_and_coverage.yml
+++ b/.github/workflows/test_and_coverage.yml
@@ -8,7 +8,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    env: GITHUB_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+    env: 
+      GITHUB_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
     strategy:
       matrix:
         python: [3.7, 3.8, 3.9]
