--- a/.github/workflows/test_and_coverage.yml
+++ b/.github/workflows/test_and_coverage.yml
@@ -6,14 +6,12 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     env: 
       GITHUB_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
     strategy:
       matrix:
         python: [3.7, 3.8, 3.9]
-
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python
@@ -34,18 +32,17 @@ jobs:
           pip install -U coveralls coverage pytest pytest-cov
           coverage run --source=creopyson setup.py test
           coveralls
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.7'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel twine
-      - name: Build and publish
-        env:
-          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-        run: |
-          python setup.py sdist bdist_wheel
-          twine upload --repository testpypi dist/*
+  deploy:
+    if: ${{ matrix.python == 3.7 }}
+    needs: build
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install setuptools wheel twine
+    - name: Build and publish
+      env:
+        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      run: |
+        python setup.py sdist bdist_wheel
+        twine upload --repository testpypi dist/*
