--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,11 +22,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install -r requirements.txt
           pip install -r requirements_dev.txt
       - name: Run Tox
         run: tox -e py
-          echo Add other actions to build,
-          echo test, and deploy your project.
       - name: install coverages stuffs
         run: |
           pip install -U coveralls coverage pytest pytest-cov
