--- a/setup.cfg
+++ b/setup.cfg
@@ -4,11 +4,11 @@ commit = True
 tag = False
 
 [bumpversion:file:setup.py]
-search = version='{current_version}'
+search = version="{current_version}"
 replace = {new_version}
 
 [bumpversion:file:creopyson/__init__.py]
-search = __version__ = '{current_version}'
+search = __version__ = "{current_version}"
 replace = {new_version}
 
 [bdist_wheel]
